Updated hobbies page

--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -6,6 +6,7 @@ layout: base.njk
 <aside class="floating-nav">
     <ul>
         <li><a href="#japanese">Japanese</a></li>
+        <li><a href="#magic">Magic</a></li>
         <li><a href="#programming">Programming</a></li>
         <li><a href="#speedcubing">Speedcubing</a></li>
         <li><a href="#running">Running</a></li>
@@ -23,34 +24,71 @@ layout: base.njk
             <div class="hobby__image" style="--bg:url(/assets/images/hobbies/japanese.jpeg)">
                 <div class="hobby__label">Japanese</div>
             </div>
-            <div class="grid">
-                <div class="grid__col-xs-6">
-                    <p>In october 2020 I started learning Japanese. Besides learning Hiragana and Katakana, I used apps like memrise to get basic vocabulary. After feeling confident with most of the Kana, I started creating my own Anki decks and started using more apps. A list of all apps, websites and others tools I used to study you can find below.</p>
-                    <p><a href="/tags/japanese" class="link">Posts about Japanese</a></p>
+
+            <p>In october 2020 I started learning Japanese. Besides learning Hiragana and Katakana, I used apps like memrise to get basic vocabulary. After feeling confident with most of the Kana, I started creating my own Anki decks and started using more apps. A list of all apps, websites and others tools I used to study you can find below.</p>
+            <p class="align-c">
+                <a href="/tags/japanese" class="button button--primary">Blog-Posts about Japanese</a>
+            </p>
+
+            <p>If you're interested in learning Japanese or looking for additional help, I compiled a list of other useful information and tools for learning and immersion. Feel free to dig around.</p>
+            
+            <div class="grid" style="--gutter: 2px;">
+                <div class="grid__col-xs-3">
+                    <h4>Websites</h4>
+
+                    <ul class="list fs-sm">
+                        <li><a href="http://jisho.org/" class="link" target="_blank">Jisho</a></li>
+                        <li><a href="https://www.superprof.de/" class="link" target="_blank">Superprof</a></li>
+                        <li><a href="https://www.wanikani.com/" class="link" target="_blank">WaniKani</a></li>
+                    </ul>
                 </div>
-                <div class="grid__col-xs-6">
-                    <h4>Useful links</h4>
+                <div class="grid__col-xs-3">
+                    <h4>Tools</h4>
                     
                     <ul class="list fs-sm">
-                        <li>
-                            Apps
-                            <ul>
-                                <li><a href="#" class="link">memrise</a></li>
-                                <li><a href="#" class="link">Duolingo</a></li>
-                                <li><a href="#" class="link">HelloTalk</a></li>
-                                <li><a href="#" class="link">Tandem</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">WaniKani</a></li>
-                        <li><a href="#">Jisho</a></li>
-                        <li><a href="#">Anki</a></li>
-                        <li><a href="#">Superprof</a></li>
+                        <li><a href="https://ankiweb.net/" class="link" target="_blank">Anki</a></li>
+                        <li><a href="https://www.duolingo.com/" class="link" target="_blank">Duolingo</a></li>
+                        <li><a href="https://www.hellotalk.com/" class="link" target="_blank">HelloTalk</a></li>
+                        <li><a href="https://www.memrise.com/" class="link" target="_blank">memrise</a></li>
+                        <li><a href="https://www.tandem.net/" class="link" target="_blank">Tandem</a></li>
+                    </ul>
+                </div>
+                <div class="grid__col-xs-3">
+                    <h4>Movies / Series</h4>
+
+                    <ul class="list fs-sm">
+                        <li><a href="https://www.imdb.com/title/tt3958276/" class="link" target="_blank">Midnight Diner</a></li>
+                        <li><a href="https://www.imdb.com/title/tt7776244/" class="link" target="_blank">Terrace House</a></li>
+                    </ul>
+                </div>
+                <div class="grid__col-xs-3">
+                    <h4>YouTube</h4>
+
+                    <ul class="list fs-sm">
+                        <li><a href="https://www.youtube.com/channel/UCtXLFX-1PwTDndWaC-5y_3g" class="link" target="_blank">Dominik Wallner</a></li>
+                        <li><a href="https://www.youtube.com/c/JunsKitchen" class="link" target="_blank">JunsKitchen</a></li>
+                        <li><a href="https://www.youtube.com/channel/UCTcsUriABcZ1I5pbA38x30A" class="link" target="_blank">マックス Makkusu</a></li>
+                        <li><a href="https://www.youtube.com/channel/UCsVBw4Uis3W2OUEQYWg3XDQ" class="link" target="_blank">Mr. Nippon</a></li>
+                        <li><a href="https://www.youtube.com/c/NihonGoo" class="link" target="_blank">NihonGo</a></li>
+                        <li><a href="https://www.youtube.com/c/GeorgeJapan" class="link" target="_blank">George</a></li>
                     </ul>
                 </div>
             </div>
         </div>
 
         <!-- ------ -->
+
+        <div class="hobby" id="magic">
+            <div class="hobby__image" style="--bg:url(/assets/images/hobbies/magic.jpeg)">
+                <div class="hobby__label">Magic</div>
+            </div>
+
+            <p>I have never been <u>not</u> mesmerized by seeing magic or sleight of hand. When I was a kid I loved watching the masked magician to see how the secrets work and then practice and perform some of them to my mother and friends.</p>
+            <p>At one point I bought my very first custom playing card deck and I studied card tricks and sleight moves for a really long time. I never lost my interest in magic but it wasn't until my early 20s that I activly joined the magic circle and upped my skills even more.</p>
+            <p>Magic is still one of my most beloved hobby but currently I'm taking a break from practice and due to corona it is difficult to go out and perform. Maybe I will return performing more often in the future.</p>
+
+            <p><a href="https://www.youtube.com/channel/UCRINrTtP4Z4csc1CHkiGxFQ" class="link" target="_blank">My magic YouTube channel</a></p>
+        </div>
 
         <div class="hobby" id="programming">
             <div class="hobby__image" style="--bg:url(/assets/images/hobbies/programming.jpeg)">
