Updated text on hobbies

--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -76,8 +76,6 @@ layout: base.njk
             </div>
         </div>
 
-        <!-- ------ -->
-
         <div class="hobby" id="magic">
             <div class="hobby__image" style="--bg:url(/assets/images/hobbies/magic.jpeg)">
                 <div class="hobby__label">Magic</div>
@@ -87,7 +85,9 @@ layout: base.njk
             <p>At one point I bought my very first custom playing card deck and I studied card tricks and sleight moves for a really long time. I never lost my interest in magic but it wasn't until my early 20s that I activly joined the magic circle and upped my skills even more.</p>
             <p>Magic is still one of my most beloved hobby but currently I'm taking a break from practice and due to corona it is difficult to go out and perform. Maybe I will return performing more often in the future.</p>
 
-            <p><a href="https://www.youtube.com/channel/UCRINrTtP4Z4csc1CHkiGxFQ" class="link" target="_blank">My magic YouTube channel</a></p>
+            <p class="align-c">
+                <a href="https://www.youtube.com/channel/UCRINrTtP4Z4csc1CHkiGxFQ" class="button button--primary" target="_blank">My magic YouTube channel</a>
+            </p>
         </div>
 
         <div class="hobby" id="programming">
@@ -95,14 +95,10 @@ layout: base.njk
                 <div class="hobby__label">Programming</div>
             </div>
 
-            <div class="grid">
-                <div class="grid__col-xs-6">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, quo quod id ducimus ipsum pariatur rem enim iure sed earum. Corrupti nesciunt perferendis magnam ipsa dicta doloribus facilis! Et, amet.</p>
-                </div>
-                <div class="grid__col-xs-6">
-                    <h4>Useful Links</h4>
-                </div>
-            </div>
+            <p>In around 7th or 8th grade I was able to join a course in school that was all about "learning" HTML and a little CSS. It wasn't much to start with but it got me interested in the whole spectrum of programming.</p>
+            <p>When the course was over I had to start learning by myself, so I decided to create my very first own website&mdash;basically the very first version of the page you're currently reading this on.</p>
+            <p>My goal was to not only learn HTML & CSS but also something to prive logic, such as PHP. I started learning the basics of PHP while getting better in HTML, CSS and also a little Javascript. It did take long until it was clear to me, that this might be something that I want to do as a full time job when I get older.</p>
+            <p>...</p>
         </div>
 
         <div class="hobby" id="speedcubing">
