Updated hobbies Added sitemap.xml Copy .htaccess to dist directory on build

--- a/src/404.html
+++ b/src/404.html
@@ -1,7 +1,15 @@
 ---
 title: Oops! Not Found
-layout: base
 permalink: 404.html
 ---
 
-Page not found
+<div class="section">
+    <div class="section__content section__content--wide align-c">
+        <h1><a href="/"><span>何・</span>404 Not Found</a></h1>
+        <h2>Oops, something went wrong</h2>
+    </div>
+        
+    <div class="section__content section__content--narrow align-c">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum, error debitis saepe minima doloremque iure incidunt quaerat non vitae dolorum tempora? Est atque rerum cupiditate. Odio fugiat nulla exercitationem distinctio!</p>
+    </div>
+</div>
