--- a/src/about.html
+++ b/src/about.html
@@ -5,8 +5,8 @@ layout: base.njk
 
 <div class="section">
     <div class="section__content section__content--wide align-c">
-        <h1><a href="/">マックス<span>・私・</span>About me</a></h1>
-        <h2>Web-Developer & Sleight of Hand Artist</h2>
+        <h1><a href="/"><span>私・</span>About me</a></h1>
+        <h2>Web-Developer with many rare hobbies</h2>
     </div>
 
     <div class="section__content">
@@ -19,6 +19,9 @@ layout: base.njk
                 <p>I&rsquo;m a German based web-developer. Currently <span class="age">28</span> years old and living in the beautiful city of Mainz.</p>
                 <p>Besides programming web-applications I do a lot of other things. You can read more about my hobbies <a href="/hobbies" class="link">over here</a>.</p>
                 <p>Feel free to wander around and drop me a message if you have any questions. You can find my socials below or on my <a href="/beacons" class="link">beacons page</a></p>
+                <p class="align-c">
+                    <a href="{{ '/cv' | url }}" class="button button--primary">Full CV</a>
+                </p>
             </div>
         </div>
     </div>
