--- a/src/blog.html
+++ b/src/blog.html
@@ -10,7 +10,7 @@ pagination:
 
 <div class="section">
     <div class="section__content section__content--wide align-c">
-        <h1><a href="/">Blog</a></h1>
+        <h1><a href="/"><span>書・</span>Blog</a></h1>
         <h2>Sometimes I write about stuff.</h2>
     </div>
 
