--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -9,7 +9,8 @@ layout: base.njk
         <li><a href="#magic">Magic</a></li>
         <li><a href="#programming">Programming</a></li>
         <li><a href="#speedcubing">Speedcubing</a></li>
-        <li><a href="#running">Running</a></li>
+        {# <li><a href="#running">Scuba Diving</a></li> #}
+        {# <li><a href="#running">Running</a></li> #}
     </ul>
 </aside>
 
@@ -97,8 +98,14 @@ layout: base.njk
 
             <p>In around 7th or 8th grade I was able to join a course in school that was all about "learning" HTML and a little CSS. It wasn't much to start with but it got me interested in the whole spectrum of programming.</p>
             <p>When the course was over I had to start learning by myself, so I decided to create my very first own website&mdash;basically the very first version of the page you're currently reading this on.</p>
-            <p>My goal was to not only learn HTML & CSS but also something to prive logic, such as PHP. I started learning the basics of PHP while getting better in HTML, CSS and also a little Javascript. It did take long until it was clear to me, that this might be something that I want to do as a full time job when I get older.</p>
-            <p>...</p>
+            <p>My goal was to not only learn HTML & CSS but also something to provide logic, such as PHP. I started learning the basics of PHP while getting better with HTML and CSS. It didn't take long until it was clear to me, that this might be something that I want to do as a full time job when I get older.</p>
+            <p>At the age of 16 I started an internship at a local internet marketing agency. After completing my internship I was able to add a complete 3 year training at the same company. Fast forward and I became a certified IT engineer, yay!</p>
+            <p></p>
+
+            <p class="align-c">
+                <a href="{{ '/cv' | url }}" class="button button--primary">My CV</a>
+                <a href="https://www.github.com/MyXoToD" class="button button--primary" target="_blank">My GitHub</a>
+            </p>
         </div>
 
         <div class="hobby" id="speedcubing">
@@ -106,29 +113,23 @@ layout: base.njk
                 <div class="hobby__label">Speedcubing</div>
             </div>
 
-            <div class="grid">
-                <div class="grid__col-xs-6">
-                    When I was a teenager I stumbled upon a rubiks cube in our living room.
-                </div>
-                <div class="grid__col-xs-6">
-                    <h4>Useful Links</h4>
-                </div>
-            </div>
+            <p>The mind-bending number of possible combinations of a Rubiks Cube has always mesmerized me but it wasn't until I found an old cube hidden in the depths of a living room cabinet that I started learning how to solve these. Ok, finally having access to the internet and YouTube also helped a lot here ngl.</p>
+            <p>Besides the <a href="https://www.youtube.com/watch?v=n55JFh5V8zY" rel="nofollow" target="_blank">Rubiks Cube Rap</a> I remember following my very first "3x3 Layer by Layer Tutorial" and I tell you it is the absolute best feeling to solve a cube on your own for the first time&mdash;even if you have to read all the algorithms from a little cheat sheet.</p>
+            <p>Going from 10 minutes to 5 to 3 to 1:30 to below 1 minute, I was making quite some progress in a very short time. But reaching times around 40 seconds I realized I couldn't get any faster with this method, at least not at this time. So I had to find a better way to improve further. Welcome to the <a href="https://de.wikipedia.org/wiki/Methoden_zum_L%C3%B6sen_des_Zauberw%C3%BCrfels#Fridrich-Methode/CFOP" rel="nofollow" target="_blank">Fridrich Method</a> and a shit-load of algorithms.</p>
+            <p>After studying this for a long time I was able to get consistent times below 30 seconds and even some below 20 seconds. It was finally time to step up the game and visit some competitions. The first big event for me was 2011 in Eindhoven, Netherlands. The first official average solve time I got was 34.49 seconds and an official personal best of 24.11 seconds. I was so incredibly proud (even though I DNF'ed my first official solve LOL).</p>
+            <p>In 2013 I was able to go to the World Championship of Speedcubing in Las Vegas. Oh boy&mdash;I was hyped. Feel free to watch a <a href="https://www.youtube.com/watch?v=kcIvwpm4PIc" rel="nofollow" target="_blank">video of my trip</a>. I managed to improve my official times but after coming back to Germany I kind of retired from going to competitions. I still solve some puzzles every now and then but no more regular training for me as of now.</p>
+
+            <p class="align-c">
+                <a href="https://www.worldcubeassociation.org/persons/2011BOLL01" class="button button--primary" target="_blank">My WCA Profile</a>
+            </p>
         </div>
 
-        <div class="hobby" id="running">
+        {# <div class="hobby" id="running">
             <div class="hobby__image" style="--bg:url(/assets/images/hobbies/running.jpeg);">
                 <div class="hobby__label">Running</div>
             </div>
 
-            <div class="grid">
-                <div class="grid__col-xs-6">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus officia temporibus ex! Repellat perferendis corrupti itaque beatae officia sequi voluptas rem fugit aliquam maiores ad, eaque doloribus doloremque sint mollitia.</p>
-                </div>
-                <div class="grid__col-xs-6">
-                    <h4>Useful Links</h4>
-                </div>
-            </div>
-        </div>
+            Lorem Ipsum
+        </div> #}
     </div>
 </div>
