--- a/src/impressum.html
+++ b/src/impressum.html
@@ -4,14 +4,38 @@ title: Impressum
 ---
 
 <div class="section">
-    <div class="section__content section__content--narrow align-c">
-        <h1><a href="/">Impressum<span>・</span>Legal</a></h1>
+    <div class="section__content section__content--narrow">
+        <h1 class="align-c"><a href="/">Impressum</a></h1>
+
+        <hr>
+
         <h2>Contact information</h2>
 
+        <h4>Managed by</h4>
         <p>
-            <strong>Managed by</strong><br />
             Maximilian Boll<br />
-            [TODO Contact Details]
+            Mainz, Germany<br />
+            Mail: <a href="mailto:legal@makkusu.dev" class="link" rel="nofollow">legal@makkusu.dev</a><br />
+            Twitter: <a href="https://twitter.com/MyXoToD" class="link" rel="nofollow">@MyXoToD</a>
         </p>
+
+        <hr>
+
+        <h2>Privacy information</h2>
+
+        <p>This website does not use any kind of tracking or analytic tools. Server settings for any kind of logs are turned off.</p>
+        <p>Feel free to check out the source code of this website on <a href="https://github.com/MyXoToD/makkusu.dev" class="link" rel="nofollow">GitHub</a>.</p>
+
+        <hr>
+
+        <h2>Cookies</h2>
+
+        <p>No Cookies.</p>
+
+        <hr>
+
+        <h2>Personal data</h2>
+
+        <p>No personal data is collected.</p>
     </div>
 </div>
