--- a/src/imprint.html
+++ b/src/imprint.html
@@ -16,7 +16,7 @@ title: Impressum
             Maximilian Boll<br />
             Mainz, Germany<br />
             Mail: <a href="mailto:legal@makkusu.dev" class="link" rel="nofollow">legal@makkusu.dev</a><br />
-            Twitter: <a href="https://twitter.com/MyXoToD" class="link" rel="nofollow">@MyXoToD</a>
+            Twitter: <a href="https://twitter.com/MyXoToD" class="link" target="_blank" rel="nofollow">@MyXoToD</a>
         </p>
 
         <hr>
