--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -124,12 +124,11 @@ layout: base.njk
             </p>
         </div>
 
-        {# <div class="hobby" id="running">
-            <div class="hobby__image" style="--bg:url(/assets/images/hobbies/running.jpeg);">
-                <div class="hobby__label">Running</div>
-            </div>
+        <hr />
 
-            Lorem Ipsum
-        </div> #}
+        <p class="align-c">
+            More coming in the future&hellip;<br />
+            <span class="fs-sm">hopefully 🤞🏽</span>
+        </p>
     </div>
 </div>
