--- a/src/tag.html
+++ b/src/tag.html
@@ -3,7 +3,7 @@ pagination:
     data: collections
     size: 1
     alias: tag
-permalink: /tags/{{ tag }}/
+permalink: /tag/{{ tag }}/
 layout: base
 ---
 
@@ -13,7 +13,7 @@ layout: base
 
 <div class="section">
     <div class="section__content section__content--narrow align-c">
-        <h1><a href="/">書く<span>・</span>Blog</a></h1>
+        <h1><a href="{{ '/blog' | url }}"><span>書・</span>Blog</a></h1>
         <h2>All posts tagged with <span>#{{ tag }}</span></h2>
     </div>
 
