Updated hobbies kanji

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,6 @@ navigation: false
     
     <div class="hub__kanji" data-kanji="1">私</div>
     <div class="hub__kanji" data-kanji="2">読</div>
-    <div class="hub__kanji" data-kanji="3">楽</div>
+    <div class="hub__kanji" data-kanji="3">趣</div>
     <div class="hub__kanji" data-kanji="4">働</div>
 </div>
