--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -16,7 +16,7 @@ layout: base.njk
 
 <div class="section">
     <div class="section__content section__content--narrow align-c">
-        <h1><a href="/">Hobbies</a></h1>
+        <h1><a href="/"><span>趣・</span>Hobbies</a></h1>
         <h2>Jack of all&mdash;Ace of none</h2>
     </div>
 
