Blog update - Changed sitemap sorting, sorting by priority - Updated blog posts - Added draft mode for blog posts - Started work on CV page - Added timeline CSS - Removed default 'posts' tag from blog posts - Renamed 'allposts' collection to 'blog' - Updated readme credits - Added Ubuntu Mono as monospace font

--- a/src/blog.html
+++ b/src/blog.html
@@ -2,16 +2,18 @@
 title: Blog
 layout: base.njk
 pagination:
-    data: collections.allposts
+    data: collections.blog
     size: 10
     alias: posts
     reverse: true
+sitemap:
+    priority: 0.9
 ---
 
 <div class="section">
     <div class="section__content section__content--wide align-c">
         <h1><a href="/"><span>書・</span>Blog</a></h1>
-        <h2>Sometimes I write about stuff.</h2>
+        <h2>Might contain personal opinions.</h2>
     </div>
 
     <div class="section__content">
