--- a/src/cv.html
+++ b/src/cv.html
@@ -2,6 +2,28 @@
 title: Circulum Vitae
 ---
 
-<h1>Circulum Vitae</h1>
+<div class="section">
+    <div class="section__content section__content--wide align-c">
+        <h1><span>私・</span>Circulum Vitae</h1>
+        <h2>How I got where I am</h2>
 
-<p>Nav: {{ navigation }}</p>
+        <hr>
+    </div>
+
+    <div class="section__content section__content--narrow">
+        <div class="timeline">
+            <div class="timeline__entry" data-label="June 2021">
+                Started work at CallOne GmbH
+            </div>
+            <div class="timeline__entry" data-label="June 2021">
+                Started work at CallOne GmbH
+            </div>
+            <div class="timeline__entry" data-label="June 2021">
+                Started work at CallOne GmbH
+            </div>
+            <div class="timeline__entry" data-label="June 2021">
+                Started work at CallOne GmbH
+            </div>
+        </div>
+    </div>
+</div>
