--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -67,11 +67,11 @@ layout: base.njk
 
                     <ul class="list fs-sm">
                         <li><a href="https://www.youtube.com/channel/UCtXLFX-1PwTDndWaC-5y_3g" class="link" target="_blank">Dominik Wallner</a></li>
+                        <li><a href="https://www.youtube.com/c/GeorgeJapan" class="link" target="_blank">George</a></li>
                         <li><a href="https://www.youtube.com/c/JunsKitchen" class="link" target="_blank">JunsKitchen</a></li>
                         <li><a href="https://www.youtube.com/channel/UCTcsUriABcZ1I5pbA38x30A" class="link" target="_blank">マックス Makkusu</a></li>
                         <li><a href="https://www.youtube.com/channel/UCsVBw4Uis3W2OUEQYWg3XDQ" class="link" target="_blank">Mr. Nippon</a></li>
                         <li><a href="https://www.youtube.com/c/NihonGoo" class="link" target="_blank">NihonGo</a></li>
-                        <li><a href="https://www.youtube.com/c/GeorgeJapan" class="link" target="_blank">George</a></li>
                     </ul>
                 </div>
             </div>
@@ -82,7 +82,7 @@ layout: base.njk
                 <div class="hobby__label">Magic</div>
             </div>
 
-            <p>I have never been <u>not</u> mesmerized by seeing magic or sleight of hand. When I was a kid I loved watching the masked magician to see how the secrets work and then practice and perform some of them to my mother and friends.</p>
+            <p>I have never <u>not</u> been mesmerized by seeing magic or sleight of hand. When I was a kid I loved watching the masked magician to see how the secrets work and then practice and perform some of them to my mother and friends.</p>
             <p>At one point I bought my very first custom playing card deck and I studied card tricks and sleight moves for a really long time. I never lost my interest in magic but it wasn't until my early 20s that I activly joined the magic circle and upped my skills even more.</p>
             <p>Magic is still one of my most beloved hobby but currently I'm taking a break from practice and due to corona it is difficult to go out and perform. Maybe I will return performing more often in the future.</p>
 
