Content & Style update - Updated favicons - Added timeline css - Added content to CV page

--- a/src/cv.html
+++ b/src/cv.html
@@ -1,28 +1,129 @@
 ---
-title: Circulum Vitae
+title: Curriculum Vitae
 ---
 
 <div class="section">
     <div class="section__content section__content--wide align-c">
-        <h1><span>私・</span>Circulum Vitae</h1>
+        <h1><span>履歴書・</span>Curriculum Vitae</h1>
         <h2>How I got where I am</h2>
 
         <hr>
     </div>
 
     <div class="section__content section__content--narrow">
+        <h2>Introduction</h2>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam molestiae repudiandae beatae ratione iste ducimus debitis alias illum aperiam fuga, odit minima distinctio consequuntur molestias aliquam libero consequatur eos inventore.</p>
+    </div>
+
+    <div class="section__content section__content--wide">
+        <div class="grid">
+            <div class="grid__col-12 grid__col-sm-4">
+                <h2>Skills</h2>
+
+                <ul class="list ff-sans">
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>Javascript</li>
+                    <li>PHP</li>
+                    <li>MySQL</li>
+                </ul>
+            </div>
+            <div class="grid__col-12 grid__col-sm-4">
+                <h2>Languages</h2>
+
+                <ul class="list ff-sans">
+                    <li>German (C2/native)</li>
+                    <li>English (C2)</li>
+                    <li>Japanese (A1/A2)</li>
+                </ul>
+            </div>
+            <div class="grid__col-12 grid__col-sm-4">
+                <h2>Interests</h2>
+
+                <ul class="list ff-sans">
+                    <li>Linux</li>
+                    <li>Photoshop</li>
+                    <li>Video Editing</li>
+                    <li>Photo Editing</li>
+                    <li>Windows</li>
+                </ul>
+            </div>
+        </div>
+
+        <hr>
+
+        <h2 class="align-c">References / Customers</h2>
+
+        <p class="align-c">logos</p>
+    </div>
+
+    <div class="section__content section__content--narrow">
+        <h2>Experience / Work</h2>
+
         <div class="timeline">
             <div class="timeline__entry" data-label="June 2021">
-                Started work at CallOne GmbH
+                <strong>Frontend-Developer @ CallOne GmbH</strong>
+                <ul>
+                    <li>Maintaining company website</li>
+                    <li>HTML, CSS, JS, PHP</li>
+                </ul>
             </div>
-            <div class="timeline__entry" data-label="June 2021">
-                Started work at CallOne GmbH
+            <div class="timeline__entry" data-label="June 2017">
+                <strong>Frontend-Developer @ matterial GmbH</strong>
+                <ul>
+                    <li>Product development</li>
+                    <li>angularJS</li>
+                </ul>
             </div>
-            <div class="timeline__entry" data-label="June 2021">
-                Started work at CallOne GmbH
+            <div class="timeline__entry" data-label="August 2013">
+                <strong>Frontend-Developer @ Opoloo GbR</strong>
             </div>
-            <div class="timeline__entry" data-label="June 2021">
-                Started work at CallOne GmbH
+            <div class="timeline__entry" data-label="May 2013">
+                <strong>Certified: IT engineer specialized in web-development</strong>
+            </div>
+            <div class="timeline__entry" data-label="August 2010">
+                <strong>IT engineer trainign @ RootconnecT e.K.</strong>
+                <ul>
+                    <li>Shopsysteme: Magento</li>
+                    <li>CMS: MODX / Etomite, Typo3, Drupal</li>
+                    <li>HTML, CSS, JS, PHP, MySQL</li>
+                </ul>
+            </div>
+            <div class="timeline__entry" data-label="August 2009">
+                <strong>Internship @ RootconnecT e.K.</strong>
+                <ul>
+                    <li>Improving HTML & CSS</li>
+                    <li>Learning PHP</li>
+                </ul>
+            </div>
+        </div>
+
+        <hr>
+
+        <h2>Education</h2>
+
+        <div class="timeline">
+            <div class="timeline__entry" data-label="2010 - 2013">
+                <strong>Carl-Benz-Schule Koblenz</strong>
+                <ul>
+                    <li>Studied for IT training @ RootconnecT e.K.</li>
+                </ul>
+            </div>
+            <div class="timeline__entry" data-label="2009">
+                <strong>Berufsschule Simmern</strong>
+                <ul>
+                    <li>Studied electrical engineering</li>
+                </ul>
+            </div>
+            <div class="timeline__entry" data-label="2005 - 2009">
+                <strong>Realschule plus Simmern</strong>
+            </div>
+            <div class="timeline__entry" data-label="2003 - 2005">
+                <strong>IGS Emmelshausen</strong>
+            </div>
+            <div class="timeline__entry" data-label="1999 - 2003">
+                <strong>Rottmannschule Simmern</strong>
             </div>
         </div>
     </div>
