Small fixes in content

--- a/src/cv.html
+++ b/src/cv.html
@@ -4,7 +4,7 @@ title: Curriculum Vitae
 
 <div class="section">
     <div class="section__content section__content--wide align-c">
-        <h1><span>履歴書・</span>Curriculum Vitae</h1>
+        <h1><a href="{{ '/about' | url }}"><span>履歴書・</span>Curriculum Vitae</a></h1>
         <h2>How I got where I am</h2>
 
         <hr>
@@ -83,7 +83,7 @@ title: Curriculum Vitae
                 <strong>Certified: IT engineer specialized in web-development</strong>
             </div>
             <div class="timeline__entry" data-label="August 2010">
-                <strong>IT engineer trainign @ RootconnecT e.K.</strong>
+                <strong>IT engineer training @ RootconnecT e.K.</strong>
                 <ul>
                     <li>Shopsysteme: Magento</li>
                     <li>CMS: MODX / Etomite, Typo3, Drupal</li>
