--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -28,7 +28,7 @@ layout: base.njk
 
             <p>In october 2020 I started learning Japanese. Besides learning Hiragana and Katakana, I used apps like memrise to get basic vocabulary. After feeling confident with most of the Kana, I started creating my own Anki decks and started using more apps. A list of all apps, websites and others tools I used to study you can find below.</p>
             <p class="align-c">
-                <a href="/tags/japanese" class="button button--primary">Blog-Posts about Japanese</a>
+                <a href="/tag/japanese" class="button button--primary">Blog-Posts about Japanese</a>
             </p>
 
             <p>If you're interested in learning Japanese or looking for additional help, I compiled a list of other useful information and tools for learning and immersion. Feel free to dig around.</p>
