Changed Kanji for Blog

--- a/src/index.html
+++ b/src/index.html
@@ -7,18 +7,18 @@ navigation: false
 <div class="hub">
     <div class="hub__col hub__col--wide">
         <a href="{{ '/about' | url }}" class="hub__link" data-kanji="1">About</a>
-        <a href="{{ '/blog' | url }}" class="hub__link" data-kanji="2">Blog</a>
+        <a href="{{ '/hobbies' | url }}" class="hub__link" data-kanji="2">Hobbies</a>
     </div>
     <div class="hub__col">
         <div class="hub__title">マックス</div>
     </div>
     <div class="hub__col hub__col--wide">
-        <a href="{{ '/hobbies' | url }}" class="hub__link" data-kanji="3">Hobbies</a>
+        <a href="{{ '/blog' | url }}" class="hub__link" data-kanji="3">Blog</a>
         <a href="#" class="hub__link hub__link--locked" data-kanji="4" title="soon&hellip;">&nbsp;Projects&nbsp;</a>
     </div>
     
     <div class="hub__kanji" data-kanji="1">私</div>
-    <div class="hub__kanji" data-kanji="2">読</div>
-    <div class="hub__kanji" data-kanji="3">趣</div>
+    <div class="hub__kanji" data-kanji="2">趣</div>
+    <div class="hub__kanji" data-kanji="3">綴</div>
     <div class="hub__kanji" data-kanji="4">働</div>
 </div>
