--- a/src/blog.html
+++ b/src/blog.html
@@ -12,7 +12,7 @@ sitemap:
 
 <div class="section">
     <div class="section__content section__content--wide align-c">
-        <h1><a href="/"><span>書・</span>Blog</a></h1>
+        <h1><a href="/"><span>綴・</span>Blog</a></h1>
         <h2>Might contain personal opinions.</h2>
     </div>
 
