Blog update: Taglist - Added tag list to blog page - Drafts/Unpublished posts are now hidden on sitemap.xml - Exclude some collections from tag page - Clear build directory before inital build for a clean build - Updated content on about/cv page - Adjusted eleventy config to handle new collection alltags

--- a/src/about.html
+++ b/src/about.html
@@ -35,11 +35,11 @@ sitemap:
 
                 <ul class="list list--plus">
                     <li>
-                        <span class="c-primary">CallOne GmbH</span> // <span class="c-primary">Senior Frontend-Webdeveloper</span><br />
+                        <span class="c-primary">CallOne GmbH</span> // <span class="c-primary">Frontend-Webdeveloper</span><br />
                         <span class="fs-sm">June 2021 - Present</span>
                     </li>
                     <li>
-                        <span class="c-primary">matterial GmbH</span> // <span class="c-primary">Senior Frontend-Webdeveloper</span><br />
+                        <span class="c-primary">matterial GmbH</span> // <span class="c-primary">Frontend-Webdeveloper</span><br />
                         <span class="fs-sm">November 2017 - May 2021</span>
                     </li>
                     <li>
