--- a/src/tag.html
+++ b/src/tag.html
@@ -3,6 +3,11 @@ pagination:
     data: collections
     size: 1
     alias: tag
+    filter:
+        - all
+        - alltags
+        - blog
+        - sitemap
 permalink: /tag/{{ tag }}/
 layout: base
 ---
