--- a/src/cv.html
+++ b/src/cv.html
@@ -78,6 +78,12 @@ title: Curriculum Vitae
             </div>
             <div class="timeline__entry" data-label="August 2013">
                 <strong>Frontend-Developer @ Opoloo GbR</strong>
+                <ul>
+                    <li>Building a lot of local company websites</li>
+                    <li>Wordpress</li>
+                    <li>Ruby On Rails</li>
+                    <li>HTML, CSS, JS, PHP, MySQL</li>
+                </ul>
             </div>
             <div class="timeline__entry" data-label="May 2013">
                 <strong>Certified: IT engineer specialized in web-development</strong>
